feat: Implementar sección Tienda y Almacén y mejorar visibilidad de formularios

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,6 +36,12 @@
                     <li class="nav-item">
                         <a href="produccion.html" class="nav-link">Producción</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="tienda-almacen.html" class="nav-link">Tienda y Almacén</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="tienda.html" class="nav-link">Tienda</a>
+                    </li>
                     <li class="nav-item ">
                         <a href="agenda.html" class="nav-link">Agenda</a>
                     </li>
