--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -26,6 +26,7 @@
           <li class="nav-item"><a href="contratos.html" class="nav-link">Contratos</a></li>
           <li class="nav-item"><a href="inventario.html" class="nav-link">Inventario</a></li>
           <li class="nav-item"><a href="produccion.html" class="nav-link">Producción</a></li>
+          <li class="nav-item"><a href="tienda-almacen.html" class="nav-link">Tienda y Almacén</a></li>
           <li class="nav-item"><a href="agenda.html" class="nav-link active">Agenda</a></li>
           <li class="nav-item"><a href="reportes.html" class="nav-link">Reportes</a></li>
           <li class="nav-item"><a href="configuracion.html" class="nav-link">Configuración</a></li>
