--- a/pages/inventario.html
+++ b/pages/inventario.html
@@ -28,8 +28,15 @@
           <li class="nav-item"><a href="clientes.html" class="nav-link">Clientes</a></li>
           <li class="nav-item"><a href="contratos.html" class="nav-link">Contratos</a></li>
           <li class="nav-item"><a href="inventario.html" class="nav-link active">Inventario</a></li>
-          <li class="nav-item"><a href="produccion.html" class="nav-link">Producción</a></li>
-          <li class="nav-item"><a href="agenda.html" class="nav-link">Agenda</a></li>
+          <li class="nav-item">
+            <a href="produccion.html" class="nav-link">Producción</a>
+          </li>
+          <li class="nav-item">
+            <a href="tienda-almacen.html" class="nav-link">Tienda y Almacén</a>
+          </li>
+          <li class="nav-item">
+            <a href="agenda.html" class="nav-link">Agenda</a>
+          </li>
           <li class="nav-item"><a href="reportes.html" class="nav-link">Reportes</a></li>
           <li class="nav-item"><a href="configuracion.html" class="nav-link">Configuración</a></li>
           <li class="nav-item"><a href="login.html" class="nav-link">Cerrar Sesión</a></li>
