--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -38,6 +38,9 @@
                         <a href="produccion.html" class="nav-link active">Producción</a>
                     </li>
                     <li class="nav-item">
+                        <a href="tienda-almacen.html" class="nav-link">Tienda y Almacén</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="agenda.html" class="nav-link">Agenda</a>
                     </li>
                     <li class="nav-item">
