Organización y estructurado   de carpetas

--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <title>Dashboard - Sistema de Gestión Fotográfica</title>
     <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="stylesheet" href="../assets/css/index.css" >
+    <script src="../assets/js/index.js"></script>
 </head>
 <body>
     <div class="container">
@@ -38,9 +39,6 @@
                     </li>
                     <li class="nav-item">
                         <a href="tienda-almacen.html" class="nav-link">Tienda y Almacén</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="tienda.html" class="nav-link">Tienda</a>
                     </li>
                     <li class="nav-item ">
                         <a href="agenda.html" class="nav-link">Agenda</a>
@@ -171,12 +169,5 @@
             </div>
         </div>
     </div>
-
-    <script>
-        document.getElementById('menuToggle').addEventListener('click', function() {
-            document.querySelector('.sidebar').classList.toggle('active');
-            this.classList.toggle('menu-active');
-        });
-    </script>
 </body>
 </html> 
